--- a/styles.css
+++ b/styles.css
@@ -105,4 +105,5 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    word-wrap: break-word;
 }
